--- a/movie_library/static/css/main.css
+++ b/movie_library/static/css/main.css
@@ -13,6 +13,20 @@
   --border: 3px solid #000;
 }
 
+/* we can attach classes to elements of the dom element.class this selector is more specific so has more priority */
+:root.dark-mode {
+  --text-dark: #fbf2f2;
+  --text-light: #000;
+  --text-muted: #595959;
+
+  --background-color: #1c2023;
+  --accent-colour: #f56565;
+  --accent-colour: #3bb54a;
+  --tag-colour: var(--accent-colour-2);
+
+  --border-colour: 3px solid #fff;
+}
+
 .button {
   --background-color: #e2e8f0;
   --background-color-hover: #bdd1eb;
@@ -48,11 +62,24 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   /* Sets the shared font characteristics, so that that they can be inherited globally */
   font-family: 'Public Sans', sans-serif;
   color: var(--text-dark);
   line-height: 1.45;
   background-color: var(--background-color);
+}
+
+.main {
+  flex-grow: 1;
+  padding: 3rem 1.5rem 2rem 1.5rem;
+}
+
+@media screen and (min-width: 30em) {
+  .main {
+    padding-top: 5rem;
+  }
 }
 
 .header {
@@ -126,6 +153,12 @@ body {
 .nav__icon {
   width: 1em;
   height: 1em;
+}
+
+.footer {
+  padding: 1rem 0;
+  color: var(--text-muted);
+  text-align: center;
 }
 
 /* Button styles that we'll share across our site */
