--- a/movie_library/templates/layout.html
+++ b/movie_library/templates/layout.html
@@ -1,7 +1,8 @@
 {% from 'macros/nav.html' import header %}
+{% from 'macros/footer.html' import footer %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="{{ 'dark-mode' if session.get('theme') == 'dark' }}">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,10 +17,11 @@
     </head>
     
     <body>
-        {{ header("k", "") }}
-            <main class="main">
-                {% block main_content %} 
-                {% endblock %}
-            </main>
+        {{ header(session.get("email"), session.get("theme")) }}
+        <main class="main">
+            {% block main_content %} 
+            {% endblock %}
+        </main>
+        {{ footer() }}
     </body>
 </html>
