--- a/movie_library/templates/macros/nav.html
+++ b/movie_library/templates/macros/nav.html
@@ -1,4 +1,7 @@
+{% from 'macros/svgs.jinja2' import moon, sun  %}
+
 {% macro header(email, theme) %}
+
 <div class="header">
   <div class="nav-container">
     <a href="{{ url_for('pages.index' ) }}" class="header__logo">
@@ -23,7 +26,18 @@
           <span class="nav__item">Log out</span>
         </a>
       {% endif %}
+      <!--! when the function in url_for doesn't have parameters, the variables we pass are treated as query parameters  -->
+      <a href="{{ url_for('pages.toggle_theme', current_page=request.path, query_test="test string") }}" class="nav__link">
+        <span class="nav__item">
+          {% if theme == "dark" %}
+            {{ sun("nav__icon") }}
+          {% else %}
+            {{ moon("nav__icon") }}
+          {% endif %}
+        </span>
+      </a>
     </nav>  
   </div>
 </div>
+
 {% endmacro %}
