--- a/movie_library/static/css/main.css
+++ b/movie_library/static/css/main.css
@@ -24,7 +24,7 @@
   --accent-colour: #3bb54a;
   --tag-colour: var(--accent-colour-2);
 
-  --border-colour: 3px solid #fff;
+  --border: 3px solid #fff;
 }
 
 .button {
