--- a/movie_library/templates/movie_details.html
+++ b/movie_library/templates/movie_details.html
@@ -23,12 +23,12 @@
           <div class="movie__watched">
             {% if movie.last_watched %}
               <p>
-                Last Watched: <a href="" class="watched__link">
+                Last Watched: <a href="{{ url_for('pages.watch_today', _id=movie._id ) }}" class="watched__link">
                   <time datetime="{{ movie.last_watched }}">{{ movie.last_watched.strftime("%d %b %Y") }}</time>
                 </a>
               </p>
             {% else %}
-              <p><a href="#" class="watched__link">Not watched yet</a></p>
+              <p><a href="{{ url_for('pages.watch_today', _id=movie._id ) }}" class="watched__link">Not watched yet</a></p>
             {% endif %}
             <a href="#" class="movie__edit">Edit {{ pencil("pencil") }}</a>
           </div>
